--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,8 @@ uvicorn[standard]>=0.27.0
 python-multipart>=0.0.6
 openai>=1.30.0
 pydantic>=2.0.0
-PyPDF2>=3.0.1
+pymupdf>=1.23.0
+pillow>=10.0.0
 python-dotenv>=1.0.0
 sqlalchemy>=2.0.0
 aiosqlite>=0.19.0
